--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"daisyui": "^1.22.2",
 		"graphql": "^16.2.0",
 		"graphql-request": "^3.7.0",
+		"marked": "^4.0.10",
 		"postcss": "^8.4.5",
 		"prettier": "^2.4.1",
 		"prettier-plugin-svelte": "^2.4.0",
